--- a/src/Component/signin.css
+++ b/src/Component/signin.css
@@ -1,156 +1,19 @@
 
-.text{
-    margin-top: 5%;
-    background: white;
-    width: 31%;
-    height: auto;
-    margin-left: 32%;
-    padding: 50px;
-    border-radius: 5px;
-    box-shadow: rgba(60, 66, 87, 0.12) 0px 0px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
-  }
-  
-  /* button{
-    margin-left: 70px;
-  } */
-  
-  
-   .form-group {
-    margin-bottom: 10px;
-  }
-  
-  
-  .label,input{
-    width: 100%;
-    padding: 8px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  
-  }
+.contain{
+  width: 35%;
+  margin-left: 30%;
+}
 
-  select{
-    width: 105%;
-    padding: 8px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  
-  } 
-  
-  .submit{
-    width: 100px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    padding: 6px;
-    margin-left: 120px;
-    margin-top: 10px;
-    font-size: 15px;
-    background-color: #203864;
-    color: #fff;
-  } 
-  
-   /* button:hover{
-    background-color: rgb(237, 226, 226);
-  }  */
-  
-  #button{
-    width: 100px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    padding: 6px;
-    margin-left: 20px;
-    margin-top: 30px;
-    font-size: 15px;
-  }
+.divide{
+  display: flex;
+  justify-content: space-between;
+}
 
-  .btn{
-    color: blue;
-    text-decoration: underline;
-  }
- 
-  
-  
-  
-   #server{
-    margin-left: 10px;
-    font-size: 110px;
-    margin-top: 10px;
-    color: #203864;
-    } 
-  
-  
-    .system{
-      width: 380px;
-      height: auto;
-      margin-top: 10%;
-      margin-left: 30px;
-      border-radius: 5px;
-      box-shadow: rgba(60, 66, 87, 0.12) 0px 0px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
-    }
-  
-   
-  
-  
-    .text1{
-      margin-bottom: 20px;
-      width: 350px;
-      margin-top: 3%;
-      /* height: auto; */
-      padding: 50px;
-      border-radius: 10px;
-      box-shadow: rgba(60, 66, 87, 0.12) 0px 0px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
-    }
-    
-  
-    .sys{
-      width: 380px;
-      /* height: auto; */
-      margin-top: 3%;
-      margin-left: 300px;
-       border-radius: 10px; 
-       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    } 
-  
-  
-    #Password{
-      width: 100%;
-      padding: 10px;
-      margin: 5px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-  
-    #show{
-      position: absolute;
-      right: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-      cursor: pointer;
-    }
-  
-    .check{
-      display: inline-flex;
-      align-items: center;
-      font-size: 14px;
-      white-space: nowrap;
-    }
-  
-    #box{
-       margin-right: 5px;
-      transform: scale(1.3);
-      margin-top: 4px;
-    }
-  
-    .register{
-        width: 40%;
-        margin: auto;
-        box-shadow: rgba(60, 66, 87, 0.12) 0px 0px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
-        padding: 20px;
-    }
-  
-    .button1{
-        width: 25%;
-        margin-top: 15px;
-        margin-left: 35%;
-    }
+.contains{
+  width: 65%;
+  margin-left: 17%;
+}
+.btn-primary{
+  width: 35%;
+  margin-left: 30%;
+}
