--- a/src/App.css
+++ b/src/App.css
@@ -117,3 +117,56 @@ select{
 }
 
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  padding: 10px 20px;
+  color: white;
+}
+
+.navbar-brand {
+  font-size: 1.5rem;
+}
+
+.navbar-links a {
+  color: white;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+.navbar-links a:hover {
+  text-decoration: underline;
+}
+
+/* Cards Container */
+.cards-container {
+  display: flex;
+  /* justify-content: space-around; */
+  margin-top: 20px;
+  gap: 30px;
+  margin-left: 220px;
+
+}
+
+.card {
+  background-color: #f4f4f4;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 60px;
+  width: 220px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card h3 {
+  margin: 0;
+}
+
+.card p {
+  font-size: 0.9rem;
+  color: #555;
+}
+
+
